Phase 3: real Commander pod (3 seats, decklist resolution) + fix decision-menu masking bug
GameServer now builds a 3-player Commander game (one human, two AI) from
a real decklist (Krenko, Mob Boss goblins) resolved by name against
Forge's card database via resolveDeck()/resolveCard(), using
RegisteredPlayer.forCommander() and GameType.Commander.

Found and fixed a real bug while testing: chooseSpellAbilityToPlay was
asking yes/no on the embedded AI's single top suggestion. AiController's
land-vs-spell heuristic always returns the land play first whenever an
unplayed land sits in hand, never falling through to consider spells -
so as long as any land remained unplayed (likely most of the game, given
land-heavy draws), every decision surfaced over the wire was 'Play land'
and nothing else, even with 20+ mana available. Replaced it with a full
legal-action menu (every playable ability from hand and battlefield,
filtered by Card.getAllPossibleAbilities(player, true)) so the wire
exposes the real decision space instead of being funneled through that
heuristic. This also better matches the end goal of full manual play.